--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
     <groupId>io.zipcodewilmington</groupId>
     <artifactId>ProductInventoryLab</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependencies>
+        <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13</version>
+        <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
     <build>
         <plugins>
