--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,21 @@
     <groupId>io.zipcodewilmington</groupId>
     <artifactId>ProductInventoryLab</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.12.4</version>
+    </dependency>
+</dependencies>
     <build>
         <plugins>
             <plugin>
